--- a/MISA.AMIS.KeToan.API/MISA.AMIS.KeToan.API.csproj
+++ b/MISA.AMIS.KeToan.API/MISA.AMIS.KeToan.API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="EPPlus" Version="6.1.1" />
     <PackageReference Include="MySqlConnector" Version="2.1.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
