--- a/MISA.AMIS.KeToan.Common/MISA.AMIS.KeToan.Common.csproj
+++ b/MISA.AMIS.KeToan.Common/MISA.AMIS.KeToan.Common.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="6.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Resources\ResourceVN.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
