--- a/MISA.AMIS.KETOAN.DL/MISA.AMIS.KeToan.DL.csproj
+++ b/MISA.AMIS.KETOAN.DL/MISA.AMIS.KeToan.DL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="EPPlus" Version="6.1.1" />
     <PackageReference Include="MySqlConnector" Version="2.1.13" />
+    <PackageReference Include="runtime.native.System.Data.SqlClient.sni" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
